Updated with Return Content button still figuring out how to keep it from appearing with time delay

--- a/res/layout/main_screen_layout.xml
+++ b/res/layout/main_screen_layout.xml
@@ -29,5 +29,10 @@
             android:layout_marginBottom="170dp"
             android:onClick="goToPicture"
             android:text="@string/add_picture"/>
-
+    <Button android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="goToReturnMessage"
+            android:text="@string/add_content"
+            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
+            android:layout_marginBottom="48dp"/>
 </RelativeLayout>
